Updated todo list based on progress.

--- a/todo.txt
+++ b/todo.txt
@@ -14,5 +14,6 @@ APCS1 pd5
 4.  As our MVP requires a number of different algorithms. We will begin work immediately. It is important to note that should anyone individual need help, the help would be promptly supplied by the remaining team members.
 -DONE-
 5.  Improve aesthetics of interface to be more similar to that of the terminal.
-
+-DONE-
 6.  Adapt the hacker tools and their functionality such that they may work, even if it is simply at the "tutorial-level".
+	
