--- a/todo.txt
+++ b/todo.txt
@@ -29,18 +29,27 @@ Start on Puzzle portion(Actual Game)
 
 9. Create network manager, with a 2d array, wiht numbers and characters, to illustrate the network map and the different computer systems you can log into
 (Jeffrey, continue to work on the initial scene from tutorial and add items to largeTextFile)
+-DONE-
 
 10. Set up computer switching, hacker@home <-- home is a computer, hacker@someOtherComputer <---, which has a whole set of other directories
+-DONE-
 
 11. Set up Detection, when you lose stealth as a hacker, a random chance when you open a file, which will give you a challenge you must do to further proceed
-
+-Not Doing-
 12. Implement Decryptor into your Woo
 
 13. Make everything work together, with the PUZZLE idea complete in your mind 
 
 14. Maybe set up TIP bot
-
+-Not Doing-
 15. End Scenario/End Game
+
+16. Fix HELP/Game Manual
+
+17. Fix Aesthetics + backstory
+
+18. update UML, flowchart, and proposal
+
 
 
 	
